Localize js for saving csv/excel buttons on ligand-info.html

--- a/ligand/templates/ligand_info.html
+++ b/ligand/templates/ligand_info.html
@@ -482,11 +482,8 @@
 <script src="{% static 'home/js/gpcrdb.js' %}"></script>
 <script src="{% static 'home/js/d3.v4.min.js' %}"></script>
 <script src="{% static 'home/js/sankey.js' %}"></script>
-<script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script> <!-- For Excel -->
-
-
-
+<script src="{% static 'home/js/buttons.html5.min.js' %}"></script> <!-- For CSV -->
+<script src="{% static 'home/js/jszip.min.js' %}"></script> <!-- For Excel -->
 
 <script type="text/javascript">
     var page = '{{ page }}';
