--- a/ligand/templates/ligand_info.html
+++ b/ligand/templates/ligand_info.html
@@ -43,11 +43,11 @@
     
     <!-- Tabs for Agent/Drug and Bioactivity -->
     <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#agent_drug" id="agent_drug_tab">Agent/drug</a>
+        </li>
         <li class="nav-item active">
             <a class="nav-link active" data-toggle="tab" href="#bioactivity" id="bioactivity_tab">Bioactivity</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#agent_drug" id="agent_drug_tab">Agent/Drug</a>
         </li>
 		{% if ligand.labels.endogenous == 'Endogenous' %}
 			<li class="nav-item">
@@ -374,7 +374,7 @@
              <hr>
             <h3>Sankey plot</h3>
             {% if plot_existence == 'yes' %}
-                <div id="sankey_plot"></div>
+                <div id="sankey_plot" style="display: flex; justify-content: center;"></div>
                 <p>
                     <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown"
@@ -383,13 +383,13 @@
                         </button>
                         <ul class="dropdown-menu">
                         <li>
-                                <a href="javascript:saveSvgAsPng(document.getElementById('sankey'), 'sankey_{{ indication }}.png');">PNG</a>
+                                <a href="javascript:saveSvgAsPng(document.getElementById('sankey'),'sankey.png');">PNG</a>
                         </li>
                         <li>
-                                <a href="javascript:saveSvgAsJpg(document.getElementById('sankey'), 'sankey_{{ indication }}.jpg');">JPG</a>
+                                <a href="javascript:saveSvgAsJpg(document.getElementById('sankey'),'sankey.jpg');">JPG</a>
                         </li>
                         <li>
-                                <a href="javascript:saveSvgAsTiff(document.getElementById('sankey'), 'sankey_{{ indication }}.tiff');">TIFF</a>
+                                <a href="javascript:saveSvgAsTiff(document.getElementById('sankey'),'sankey.tiff');">TIFF</a>
                         </li>
                         </ul>
                     </div></p>
@@ -471,6 +471,7 @@
 
 {% block addon_js %}
 <!-- Make sure the Select2 JS file is included -->
+<script src="{% static 'home/js/saveSvgAsPng.js' %}"></script> <!-- For Saving Sankey plot -->
 <script src="{% static 'home/js/select2_4.1.0-rc.0_full.js' %}"></script>
 <script src="{% static 'home/js/DataTables_v2.0.5.js' %}"></script>
 <script src="{% static 'home/js/dataTables.buttons_3_0_0.js' %}"></script>
@@ -751,7 +752,6 @@ SankeyPlot(sankey_data, 'sankey_plot', top_nodes, totalPoints, custom_width);
 {% endblock %}
 
 {% block addon_css %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'home/css/button_spinner.css' %}" type="text/css" />
 <link rel="stylesheet" href="{% static 'home/css/select2_4.1.0-rc.0._full.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'home/css/structure_browser.css' %}" type="text/css">
